--- a/src/sass/layouts/_site.scss
+++ b/src/sass/layouts/_site.scss
@@ -8,7 +8,9 @@
 	position: relative;
 }
 
-    @media (max-width: 800px) 
+    @media (max-width: 800px) {
+        
+    }
 
 .site-content {
 	box-sizing: border-box;
