_site.scss: changed

--- a/src/sass/layouts/_site.scss
+++ b/src/sass/layouts/_site.scss
@@ -10,7 +10,7 @@
 
     @media (max-width: 800px) {
        #hero_section {
-            flex-direction: column;
+            flex-direction: column-reverse;
         }
     }
 
