--- a/src/sass/layouts/_site.scss
+++ b/src/sass/layouts/_site.scss
@@ -10,6 +10,7 @@
 
     @media (max-width: 800px) {
        #hero_section {
+           display: flex;
             flex-direction: column-reverse;
         }
     }
