--- a/src/sass/layouts/_site.scss
+++ b/src/sass/layouts/_site.scss
@@ -11,7 +11,7 @@
     @media (max-width: 800px) {
        #hero_section {
            display: flex;
-            flex-direction: row-reverse;
+            flex-direction: row;
         }
     }
 
