_base.scss: changed

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -227,6 +227,8 @@ figcaption {
     #hero_image {
 	height: auto;
     max-width: 50%;
+    margin-left: auto;
+    margin-right: auto;
     }
 
     img {
