_base.scss: changed

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -234,7 +234,7 @@ figcaption {
     img {
     height: auto;
     max-width: 60%;
-    margin-left: auto;
+    margin-left: 20%;
     margin-right: auto;
     }
 
