--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -235,7 +235,8 @@ figcaption {
     height: auto;
     max-width: 50%;
     margin-left: auto;
-    margin-right: auto;    
+    margin-right: auto;
+    display: block;    
 }
 
 }
