--- a/src/sass/layouts/_site.scss
+++ b/src/sass/layouts/_site.scss
@@ -3,7 +3,7 @@
  */
 .site {
 	display: flex;
-	flex-direction: column-reverse;
+	flex-direction: column;
 	min-height: 100vh;
 	position: relative;
 }
