_flex.scss: changed

--- a/src/sass/utilities/_flex.scss
+++ b/src/sass/utilities/_flex.scss
@@ -16,7 +16,9 @@
 }
 
 @include media-breakpoint-down(sm) {
-    
+    .flex-column {
+        flex-direction: column-reverse;
+    }
 }
 
 .flex-row {
