--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -104,7 +104,7 @@
 		margin-bottom: 0.83333em;
 	}
 @include media-breakpoint-down(sm) {
-        .item_title { margin-top: 40px};
+        .item__title { margin-top: 40px};
     }
 
 }
