_flex.scss: changed

--- a/src/sass/utilities/_flex.scss
+++ b/src/sass/utilities/_flex.scss
@@ -19,7 +19,9 @@
     .flex-column {
         flex-direction: column-reverse;
     }
-    #hero_section
+    #hero_section {
+        flex-direction: ;
+    }
 
 } 
 
