_flex.scss: changed

--- a/src/sass/utilities/_flex.scss
+++ b/src/sass/utilities/_flex.scss
@@ -20,7 +20,7 @@
         flex-direction: column-reverse;
     }
     #hero_section {
-        flex-direction: ;
+        flex-direction: column-reverse;
     }
 
 } 
