_flex.scss: changed

--- a/src/sass/utilities/_flex.scss
+++ b/src/sass/utilities/_flex.scss
@@ -20,6 +20,7 @@
         flex-direction: column-reverse;
     }
     #hero_section {
+        display: flex;
         flex-direction: column-reverse;
     }
 
