_flex.scss: changed

--- a/src/sass/utilities/_flex.scss
+++ b/src/sass/utilities/_flex.scss
@@ -19,7 +19,7 @@
     .flex-column {
         flex-direction: column-reverse;
     }
-    #.grid {
+    .grid {
         display: flex;
         flex-direction: column-reverse;
     }
