_base.scss: changed

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -224,7 +224,7 @@ figcaption {
 		font-size: 100%;
     }
 
-    #hero_section {
+    #hero_section .grid {
         display: flex;
         flex-direction: column-reverse;
     }
