--- a/src/sass/components/_containers.scss
+++ b/src/sass/components/_containers.scss
@@ -10,7 +10,7 @@
 
 	@include media-breakpoint-down(sm) {
 		padding-left: $grid-gap-small / 2;
-		padding-right: $grid-gap / 2;
+		padding-right: $grid-gap-small / 2;
 	}
 }
 
