--- a/src/sass/components/_containers.scss
+++ b/src/sass/components/_containers.scss
@@ -9,7 +9,7 @@
 	padding-right: $grid-gap;
 
 	@include media-breakpoint-down(sm) {
-		padding-left: $grid-gap-large;
+		padding-left: $grid-gap;
 		padding-right: $grid-gap;
 	}
 }
