--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -230,7 +230,7 @@ figcaption {
     }
 
     #hero_section {
-        padding-top: small;
+        padding-top: $container;
         padding-bottom: small;
     }
 
