--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -230,7 +230,7 @@ figcaption {
     }
 
     #hero_section {
-        padding-top: $container-sizes-small;
+        padding-top: $small;
         padding-bottom: small;
     }
 
