_base.scss: changed

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -230,7 +230,7 @@ figcaption {
     }
 
     #hero_section {
-        padding-top: xlarge;
+        padding-top: grid-gap-small;
         padding-bottom: xlarge;
     }
 
