_base.scss: changed

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -231,7 +231,7 @@ figcaption {
 
     #hero_section {
         padding-top: $grid-gap-small / 2;
-        padding-bottom: $grid-gap-small;
+        padding-bottom: $grid-gap-small / 2;
     }
 
 }
