--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -237,6 +237,8 @@ figcaption {
     img {
 	height: auto;
     max-width: 50%;
-    
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 }
