--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -234,7 +234,7 @@ figcaption {
         padding-bottom: $grid-gap-small / 2;
     }
 
-    img {
+    #hero_section img {
 	height: auto;
     max-width: 50%;
     
