_base.scss: changed

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -237,6 +237,9 @@ figcaption {
     #hero_section img {
 	height: auto;
     max-width: 50%;
-    
-}
+    }
+
+    #info img [
+        
+    ]
 }
