_base.scss: changed

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -242,5 +242,8 @@ figcaption {
     #info img {
     height: auto;
     max-width: 50%;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
     }
 }
