_base.scss: changed

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -238,7 +238,7 @@ figcaption {
 	height: auto;
     max-width: 50%;
     display: block;
-    margin-right: auto
+    margin-right: auto;
     }
 
     #info img {
