_base.scss: changed

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -239,6 +239,7 @@ figcaption {
     max-width: 50%;
     display: block;
     margin-right: auto;
+    margin-left: auto;
     }
 
     #info img {
