--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -207,6 +207,14 @@ figcaption {
 	text-align: left;
 }
 
+#info img {
+    height: auto;
+    max-width: 50%;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    }
+
 @include media-breakpoint-down(sm) {
 	h1 {
 		font-size: 2.22222em;
