_variables.scss: changed

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -20,7 +20,7 @@ $theme-styles: (
 		),
 		colors: (
             //blue:  #2859da,
-            yellow: #FDEA6B
+            yellow: #FDEA6B,
 			green: #01be54,
 			red:   #ec5033
 		)
