_variables.scss: changed

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -20,8 +20,8 @@ $theme-styles: (
 		),
 		colors: (
             //blue:  #2859da,
-            
-            yellow: #FDEA6B,
+
+            blkue: #FDEA6B,
 			green: #01be54,
 			red:   #ec5033
 		)
