--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -21,7 +21,7 @@ $theme-styles: (
 		colors: (
             //blue:  #2859da,
 
-            blkue: #FDEA6B,
+            blue: #FDEA6B,
 			green: #01be54,
 			red:   #ec5033
 		)
