--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -71,7 +71,7 @@ $color-hr-border:                      #eceef1 !default;
 
 // Buttons
 //$color-btn-text:                       #fff !default;
-
+$color-btn-text: 
 $color-btn-bg:                         $color-primary !default;
 $color-btn-alt-text:                   #fff !default;
 $color-btn-alt-bg:                     #2c343c !default;
