--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -75,7 +75,7 @@ $color-btn-text:                       #2c343c;
 $color-btn-bg:                         $color-primary !default;
 $color-btn-alt-text:                   #fff !default;
 $color-btn-alt-bg:                     #2c343c !default;
-$color-bold-btn-shadow:                #bfc7d0 !default;
+//$color-bold-btn-shadow:                #bfc7d0 !default;
 $color-gray-btn-alt-bg:                #8696a6 !default;
 
 // Forms
