_variables.scss: changed

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -76,7 +76,7 @@ $color-btn-bg:                         $color-primary !default;
 $color-btn-alt-text:                   #fff !default;
 $color-btn-alt-bg:                     #2c343c !default;
 //$color-bold-btn-shadow:                #bfc7d0 !default;
-$color-bold-btn-shadow:                #FDEA6B;
+$color-bold-btn-shadow:                rgba(253, 233, 107, 0.356);
 $color-gray-btn-alt-bg:                #8696a6 !default;
 
 // Forms
