--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -124,7 +124,17 @@
 		&:hover,
 		&:focus,
 		&:active {
-			box-shadow: 0 0 0 0 $color-bold-btn-shadow;
+            //box-shadow: 0 0 0 0 $color-bold-btn-shadow;
+            box-shadow:
+  2px 1.5px 3px -3px rgba(0, 0, 0, 0.029),
+  5.1px 3.9px 6.3px -3px rgba(0, 0, 0, 0.041),
+  9.7px 7.3px 10.2px -3px rgba(0, 0, 0, 0.051),
+  16.7px 12.5px 15.2px -3px rgba(0, 0, 0, 0.06),
+  27.7px 20.7px 22.7px -3px rgba(0, 0, 0, 0.069),
+  46.6px 34.9px 36.7px -3px rgba(0, 0, 0, 0.083),
+  80px 60px 77px -3px rgba(0, 0, 0, 0.11)
+;
+
 			-webkit-transform: translate(0.375em,0.375em);
 			transform: translate(0.375em,0.375em);
 		}
