--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -133,7 +133,7 @@
                         46.6px 34.9px 36.7px -3px $color-bold-btn-shadow,
                         80px 60px 77px -3px $color-bold-btn-shadow;
 
-			-webkit-transform: translate(0.375em,0.375em);
+			//-webkit-transform: translate(0.375em,0.375em);
 			//transform: translate(0.375em,0.375em);
 		}
 	}
