_buttons.scss: changed

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -134,7 +134,7 @@
                         80px 60px 77px -3px $color-bold-btn-shadow;
 
 			-webkit-transform: translate(0.375em,0.375em);
-			//transform: translate(0.375em,0.375em);
+			transform: translate(0.375em,0.375em);
 		}
 	}
 }
