_variables.scss: changed

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -77,7 +77,7 @@ $color-btn-alt-text:                   #fff !default;
 $color-btn-alt-bg:                     #2c343c !default;
 //$color-bold-btn-shadow:                #bfc7d0 !default;
 $color-bold-btn-shadow:                rgba(253, 233, 107, 0.10);
-$color-gray-btn-alt-bg:                #2c343c !default;
+$color-gray-btn-alt-bg:                red !default;
 
 // Forms
 $color-input-text:                     #2c343c !default;
