--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -74,7 +74,7 @@ $color-hr-border:                      #eceef1 !default;
 $color-btn-text:                       #2c343c;
 $color-btn-bg:                         $color-primary !default;
 $color-btn-alt-text:                   #fff !default;
-$color-btn-alt-bg:                     red !default;
+$color-btn-alt-bg:                     #2c343c !default;
 //$color-bold-btn-shadow:                #bfc7d0 !default;
 $color-bold-btn-shadow:                rgba(253, 233, 107, 0.10);
 $color-gray-btn-alt-bg:                #8696a6 !default;
