--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -113,8 +113,7 @@
 }
 
 .style-bold {
-	.btn--primary,
-	.btn--secondary {
+	.btn--primary {
         // box-shadow: 0.375em 0.375em 0 0 $color-bold-btn-shadow;
         box-shadow:     2px 1.5px 3px -3px $color-bold-btn-shadow,
                         5.1px 3.9px 6.3px -3px $color-bold-btn-shadow,
