--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -142,7 +142,11 @@
 			-webkit-transform: translate(0.375em,0.375em);
 			transform: translate(0.375em,0.375em);
 		}
-	}
+    }
+    
+    .btn--secondary {
+        
+    }
 }
 
 .palette-gray {
