_buttons.scss: changed

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -146,7 +146,7 @@
     
     .btn--secondary {
         box-shadow:     2px 1.5px 3px -3px $color-dark-bold-btn-shadow,
-                        5.1px 3.9px 6.3px -3px $color-bold-btn-shadow,
+                        5.1px 3.9px 6.3px -3px $color-dark-bold-btn-shadow,
                         9.7px 7.3px 10.2px -3px $color-bold-btn-shadow,
                         16.7px 12.5px 15.2px -3px $color-bold-btn-shadow,
                         27.7px 20.7px 22.7px -3px $color-bold-btn-shadow,
