--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -132,7 +132,7 @@
     }
     
     .btn--secondary {
-        box-shadow:     2px 1.5px 3px -3px $color-dark-bold-btn-shadow,
+        box-shadow:     0.375em 0.375em 0 0 $color-dark-bold-btn-shadow,
                         5.1px 3.9px 6.3px -3px $color-dark-bold-btn-shadow,
                         9.7px 7.3px 10.2px -3px $color-dark-bold-btn-shadow,
                         16.7px 12.5px 15.2px -3px $color-dark-bold-btn-shadow,
