_buttons.scss: changed

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -132,7 +132,7 @@
     }
     
     .btn--secondary {
-        box-shadow:     0.375em 0.375em 0 0 $color-dark-bold-btn-shadow,
+        box-shadow:     0.375em 0.375em 0 0 $color-dark-bold-btn-shadow;
 		opacity: 1;
 		position: relative;
 		-webkit-transform: translate(0,0);
