--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -101,6 +101,7 @@ $color-nav-mobile-border:              #eceef1 !default;
 $color-nav-mobile-overlay:             rgba(236,238,241,.8) !default;
 $color-bold-nav-mobile-border:         #2c343c !default;
 $color-bold-nav-mobile-overlay:        rgba(44,52,60,.8) !default;
+font-weight: 700;
 
 // Header
 $color-header-border:                  #eceef1 !default;
