_section.scss: changed

--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -68,6 +68,10 @@
 	margin-top: 1.66667em;
 }
 
+#info {
+    background-color: $color-btn-text;
+}
+
 // Grid section
 .item__subtitle {
 	font-size: 0.88889em;
