_section.scss: changed

--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -31,6 +31,10 @@
 	margin-bottom: 0.25em;
 }
 
+#about_section {
+    background-color: red;
+}
+
 // Hero section
 .hero__title {
 	margin-bottom: 0.25em;
