--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -7,7 +7,8 @@
 
 .navbar__logo,
 .navbar__title {
-	text-decoration: none;
+    text-decoration: none;
+    font-weight: 700;
 }
 
 .navbar__logo {
