--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -215,6 +215,10 @@ figcaption {
     margin-left: auto;
     }
 
+.span_accent {
+    color: 
+}
+
 @include media-breakpoint-down(sm) {
 	h1 {
 		font-size: 2.22222em;
