_section.scss: changed

--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -68,7 +68,7 @@
 	margin-top: 1.66667em;
 }
 
-#about_section, #pre_footer #progetti{
+#about_section, #pre_footer #Progetti{
     background-color: $color-btn-text;
 }
 
