--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -72,6 +72,10 @@
     background-color: $color-btn-text;
 }
 
+#Progetti {
+    background-color: 
+}
+
 // Grid section
 .item__subtitle {
 	font-size: 0.88889em;
