_section.scss: changed

--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -73,7 +73,7 @@
 }
 
 #Progetti {
-    background-color: $color-primary-sect-bg
+    background-color: $color-primary-sect-bg;
 }
 
 // Grid section
