_section.scss: changed

--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -68,7 +68,7 @@
 	margin-top: 1.66667em;
 }
 
-#about_section, #pre_footer, #info {
+#about_section, #pre_footer {
     background-color: $color-btn-text;
 }
 
