_section.scss: changed

--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -72,7 +72,9 @@
     background-color: $color-btn-text;
 }
 
-#info 
+#info {
+    
+}
 
 #Progetti {
     background-color: $color-secondary-sect-bg;
