--- a/src/sass/components/_containers.scss
+++ b/src/sass/components/_containers.scss
@@ -3,7 +3,8 @@
  */
 .container {
 	margin-left: auto;
-	margin-right: auto;
+    margin-right: auto;
+    margin-top: 25px;
 	max-width: container-max-width(large);
 	padding-left: $grid-gap;
 	padding-right: $grid-gap;
