_section.scss: changed

--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -116,7 +116,9 @@
 		margin-bottom: 0.83333em;
     }
     
-
+#numeri {
+    
+}
 @include media-breakpoint-down(sm) {
         .item__title { margin-top: 0.83333em};
     }
