_section.scss: changed

--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -117,7 +117,7 @@
     }
     
 #numeri {
-    
+    .counter 
 }
 @include media-breakpoint-down(sm) {
         .item__title { margin-top: 0.83333em};
