--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -117,7 +117,27 @@
     }
     
 #numeri  {
-     
+     @property --num {
+  syntax: "<integer>";
+  initial-value: 0;
+  inherits: false;
+}
+
+div {
+  transition: --num 5s;
+  counter-set: num var(--num);
+  font: 800 40px system-ui;
+}
+div::after {
+  content: counter(num);
+}
+div:hover {
+  --num: 100;
+}
+
+body {
+  margin: 2rem;
+}
 }
 @include media-breakpoint-down(sm) {
         .item__title { margin-top: 0.83333em};
