--- a/src/sass/layouts/_section.scss
+++ b/src/sass/layouts/_section.scss
@@ -139,7 +139,7 @@ div:hover {
 body {
   margin: 2rem;
 }
-
+}
 
 @include media-breakpoint-down(sm) {
         .item__title { margin-top: 0.83333em};
