--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -51,6 +51,7 @@ $color-primary:                        #45515e !default;
 $color-body-text:                      #2c343c !default;
 $color-meta:                           #8696a6 !default;
 //$color-body-bg:                        #fff !default;
+$color-body-bg:                        #fff !default;
 
 
 // Highlight
