_variables.scss: changed

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -57,7 +57,7 @@ $color-body-bg:                        #F2EFF4 !default;
 
 // Highlight
 $color-highlight-text:                 #2c343c !default;
-
+$color-highlight-text:                 #2c343c !default;
 $color-highlight-bg:                   #fff7c5 !default;
 
 // Code blocks
