--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -51,7 +51,7 @@ $color-primary:                        #45515e !default;
 //$color-body-text:                      #2c343c !default;
 $color-body-text:                      #0D0F0A !default;
 //$color-meta:                           #8696a6 !default;
-$color-meta:                           # !default;
+$color-meta:                           #727D8A !default;
 //$color-body-bg:                        #fff !default;
 $color-body-bg:                        #F2EFF4 !default;
 
