--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -59,7 +59,7 @@ $color-body-bg:                        #F2EFF4 !default;
 // Highlight
 //$color-highlight-text:                 #2c343c !default;
 $color-highlight-text:                 #FBE97E !default;
-$color-highlight-bg:                   #fff7c5 !default;
+//$color-highlight-bg:                   #fff7c5 !default;
 $color-highlight-bg:                   #fff7c5 !default;
 
 // Code blocks
