--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -60,7 +60,7 @@ $color-body-bg:                        #F2EFF4 !default;
 //$color-highlight-text:                 #2c343c !default;
 $color-highlight-text:                 #FBE97E !default;
 //$color-highlight-bg:                   #fff7c5 !default;
-$color-highlight-bg:                   #fff7c5 !default;
+$color-highlight-bg:                   #0D0F0A !default;
 
 // Code blocks
 $color-code-border:                    #eceef1 !default;
