--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -46,7 +46,7 @@ $font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","
 
 // Primary color for the gray palette
 $color-primary:                        #45515e !default;
-0D0F0A 
+0D0F0A $color-primary:                        #45515e !default;
 
 // Base
 //$color-body-text:                      #2c343c !default;
