--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -45,7 +45,7 @@ $font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","
 // Colors
 
 // Primary color for the gray palette
-$color-primary:                        #45515e !default;
+//$color-primary:                        #45515e !default;
 $color-primary:                        #0D0F0A !default;
 
 // Base
