--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -81,7 +81,7 @@ $color-hr-border:                      #eceef1 !default;
 //$color-btn-text:                       #2c343c;
 $color-btn-text:                       #0D0F0A;
 $color-btn-bg:                         $color-primary !default;
-$color-btn-alt-text:                   #fff !default;
+//$color-btn-alt-text:                   #fff !default;
 $color-btn-alt-text:                   #fff !default;
 $color-btn-alt-text:                   #fff !default;
 
