--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -82,7 +82,7 @@ $color-hr-border:                      #eceef1 !default;
 $color-btn-text:                       #0D0F0A;
 $color-btn-bg:                         $color-primary !default;
 //$color-btn-alt-text:                   #fff !default;
-$color-btn-alt-text:                   #fff !default;
+$color-btn-alt-text:                   #F2EFF4 !default;
 $color-btn-alt-text:                   #fff !default;
 
 $color-btn-alt-bg:                     #2c343c !default;
