_variables.scss: changed

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -84,7 +84,7 @@ $color-btn-bg:                         $color-primary !default;
 //$color-btn-alt-text:                   #fff !default;
 $color-btn-alt-text:                   #F2EFF4 !default;
 
-$color-btn-alt-bg:                     #2c343c !default;
+//$color-btn-alt-bg:                     #2c343c !default;
 
 //$color-bold-btn-shadow:                #bfc7d0 !default;
 $color-bold-btn-shadow:                rgba(204, 186, 68, 0.452);
