--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -127,7 +127,7 @@ $color-anncmnt-bg:                     #eceef1 !default;
 $color-bold-anncmnt-bg:                #2c343c !default;
 $color-bold-anncmnt-text:              #fff !default;
 
-// Sections
+// Sections backup
 $color-sect-border:                    #eceef1 !default;
 $color-bold-sect-border:               #2c343c !default;
 $color-classic-sect-underline:         $color-primary !default;
