--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -128,7 +128,7 @@ $color-bold-anncmnt-bg:                #2c343c !default;
 $color-bold-anncmnt-text:              #fff !default;
 
 // Sections backup
-$color-sect-border:                    #eceef1 !default;
+// $color-sect-border:                    #eceef1 !default;
 $color-bold-sect-border:               #2c343c !default;
 $color-classic-sect-underline:         $color-primary !default;
 $color-sect-input-bg:                  #fff !default;
