--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -129,19 +129,19 @@ $color-bold-anncmnt-text:              #fff !default;
 
 // Sections backup
 // $color-sect-border:                    #eceef1 !default;
-$color-bold-sect-border:               #2c343c !default;
-$color-classic-sect-underline:         $color-primary !default;
-$color-sect-input-bg:                  #fff !default;
-$color-primary-sect-bg:                $color-primary !default;
-$color-primary-sect-text:              #fff !default;
-$color-primary-sect-btn-text:          #2c343c !default;
-$color-primary-sect-btn-bg:            #fff !default;
-$color-secondary-sect-bg:              #eceef1 !default;
-$color-secondary-sect-code-border:     #fff !default;
-$color-secondary-sect-code-bg:         #fff !default;
-$color-secondary-sect-table-border:    #fff !default;
-$color-secondary-sect-table-bg:        #fff !default;
-$color-secondary-sect-hr-border:       #fff !default;
+// $color-bold-sect-border:               #2c343c !default;
+// $color-classic-sect-underline:         $color-primary !default;
+// $color-sect-input-bg:                  #fff !default;
+// $color-primary-sect-bg:                $color-primary !default;
+// $color-primary-sect-text:              #fff !default;
+// $color-primary-sect-btn-text:          #2c343c !default;
+// $color-primary-sect-btn-bg:            #fff !default;
+// $color-secondary-sect-bg:              #eceef1 !default;
+// $color-secondary-sect-code-border:     #fff !default;
+// $color-secondary-sect-code-bg:         #fff !default;
+// $color-secondary-sect-table-border:    #fff !default;
+// $color-secondary-sect-table-bg:        #fff !default;
+// $color-secondary-sect-hr-border:       #fff !default;
 
 // Sections
 $color-sect-border:                    #eceef1 !default;
